--- a/app.yaml
+++ b/app.yaml
@@ -12,6 +12,9 @@ handlers:
 - url: /stylesheets
   static_dir: stylesheets
   
+- url: /stylesheets/images
+  static_dir: stylesheets/images
+  
 - url: /scripts
   static_dir: scripts
 
